2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Include `libport/config.h' instead of `config.h'.
	* ufloat.h,
	* ufloat.hh: Adjust includes and fix a couple of Doxygen comments.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use config.h to know whether HAVE_ROUND.
	* ufloat.h,
	* ufloat.hh: Here.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add replacement implementation of `round'.
	* ufloat.hh [!HAVE_ROUND]: Provide replacement implementations of
	round for float, double and long double.
	* ufloat.h [!HAVE_ROUND]: Import in the top-level namespace the
	libport implementation of `round'.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Properly invoke std::abort.
	* assert.hh (__pabort, __passert): Here.

2007-09-20  Guillaume Deslandes  <deslandes@gostai.com>

	Fix libport.la location and add header to test
	* tests/Makefile.am: Fix libport location.
	* tests/test-indent.cc: Add missing header.

2007-09-17  HUMBERT Remi <humbert@gostai.com>

	* hash.hh: Comment a trailing 'namespace' keyword.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove the wrapper around Boost.Foreach.
	This won't work because the Boost.Foreach released with 1.33.1 takes
	3 arguments and can't be made compatible with that of 1.34.  I must
	have tested too quickly to not notice this.
	* Makefile.am: Remove the file.
	* foreach.hh: Remove.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a wrapper header for Boost.Foreach.
	Boost.Foreach was included in May 2005 but not released with 1.33.1
	(which was released in December 2005).  Nevertheless, a less
	optimized version was installed along with 1.33.1 in a test folder.
	This enables us to fall back on this version if the user has 1.33.1
	(which is convenient because 1.34 hasn't made its way to all
	packaging systems at this time).
	* Makefile.am: Add the new file.
	* foreach.hh: New.

2007-09-04  mefyl  <mefyl@lrde.epita.fr>

	Add reference trait.